--- a/src/core/localization/gettext/be/common.po
+++ b/src/core/localization/gettext/be/common.po
@@ -603,7 +603,7 @@ msgstr "Пошук"
 
 #: search##input_placeholder_mcda
 msgid "Search or ask AI"
-msgstr "Пошук або спытацца ў AI"
+msgstr "Шукаць або спытацца ў AI"
 
 #: search##locations_no_result
 msgid "No locations found"
