--- a/src/core/localization/gettext/ru/common.po
+++ b/src/core/localization/gettext/ru/common.po
@@ -605,7 +605,7 @@ msgstr "Поиск"
 
 #: search##input_placeholder_mcda
 msgid "Search or ask AI"
-msgstr "Поиск или спросить ИИ"
+msgstr "Найти или спросить ИИ"
 
 #: search##locations_no_result
 msgid "No locations found"
