--- a/src/core/localization/gettext/be/common.po
+++ b/src/core/localization/gettext/be/common.po
@@ -1390,7 +1390,7 @@ msgid ""
 "e.g. GIS specialist with 5+ years of experience in disaster risk analysis, "
 "focused on urban resilience."
 msgstr ""
-"Напрыклад, спецыяліст у галіне ГІС з 5+ гадамі вопыту ў аналізе рызык "
+"Напрыклад, спецыяліст у галіне ГІС з 5+ гадамі вопыту ў аналізе рызыкаў"
 "катастроф, арыентаваны на гарадскую ўстойлівасць."
 
 #: profile##analysis_objectives
@@ -1403,7 +1403,7 @@ msgid ""
 "challenge is improving flood risk mapping."
 msgstr ""
 "Напрыклад, аналіз гарадскога планавання з акцэнтам на кліматычную "
-"ўстойлівасць. Мая цяперашняя задача — паляпшэнне картаграфавання рызык "
+"ўстойлівасць. Мая цяперашняя задача — паляпшэнне картаграфавання рызыкаў"
 "паводак."
 
 #: profile##appSettingsHeader
