--- a/src/core/localization/gettext/be/common.po
+++ b/src/core/localization/gettext/be/common.po
@@ -507,10 +507,8 @@ msgid ""
 "* **Good → Bad**: Higher values indicate a negative sentiment."
 msgstr ""
 "Вызначце кірунак уздзеяння для аналізу:\n"
-"* **Дрэнна → Добра**: Больш высокія значэнні паказваюць на станоўчы "
-"напрамак.\n"
-"* **Добра → Дрэнна**: Больш высокія значэнні паказваюць на адмоўны "
-"напрамак."
+"* **Дрэнна → Добра**: Больш высокія значэнні паказваюць на станоўчы напрамак.\n"
+"* **Добра → Дрэнна**: Больш высокія значэнні паказваюць на адмоўны напрамак."
 
 #: mcda##layer_editor##tips##weight
 msgid ""
@@ -520,8 +518,8 @@ msgid ""
 msgstr ""
 "Па змаўчанні ўсе слаі аднолькава ўплываюць на аналіз праз узважаную "
 "сярэднюю.\n"
-"Павелічэнне вагі слоя (напрыклад, 2, 3 і г.д.) дазваляе надаць яму большую "
-"важкасць у аналізе."
+"Павелічэнне вагі слоя (напрыклад, 2, 3 і г.д.) дазваляе "
+"надаць яму большую важкасць у аналізе."
 
 #: mcda##layer_editor##tips##transform
 msgid ""
