--- a/src/core/localization/gettext/be/common.po
+++ b/src/core/localization/gettext/be/common.po
@@ -507,7 +507,8 @@ msgid ""
 "* **Good → Bad**: Higher values indicate a negative sentiment."
 msgstr ""
 "Вызначце кірунак уздзеяння для аналізу:\n"
-"* **Дрэнна → Добра**: Больш высокія значэнні паказваюць на станоўчы напрамак.\n"
+"* **Дрэнна → Добра**: Больш высокія значэнні паказваюць на станоўчы "
+"напрамак.\n"
 "* **Добра → Дрэнна**: Больш высокія значэнні паказваюць на адмоўны напрамак."
 
 #: mcda##layer_editor##tips##weight
@@ -517,8 +518,8 @@ msgid ""
 "to assign additional importance to it in the analysis."
 msgstr ""
 "Па змаўчанні ўсе слаі аднолькава ўплываюць на аналіз праз узважаную "
-"сярэднюю. Павелічэнне вагі слоя (напрыклад, 2, 3 і г.д.) дазваляе вам "
-"надаць яму большую важкасць у аналізе."
+"сярэднюю. Павелічэнне вагі слоя (напрыклад, 2, 3 і г.д.) дазваляе вам надаць "
+"яму большую важкасць у аналізе."
 
 #: mcda##layer_editor##tips##transform
 msgid ""
@@ -1046,7 +1047,8 @@ msgid "Layers (indicators)"
 msgstr "Слаі (індыкатары)"
 
 #: sidebar##biv_color_manager
-msgid "Color manager"
+#, fuzzy
+msgid "Сolor manager"
 msgstr "Кіраванне колерамі"
 
 #: sidebar##edit_osm
@@ -1387,8 +1389,8 @@ msgid ""
 "e.g. GIS specialist with 5+ years of experience in disaster risk analysis, "
 "focused on urban resilience."
 msgstr ""
-"Напрыклад, спецыяліст у галіне ГІС з 5+ гадамі вопыту ў аналізе рызыкаў"
-"катастроф, арыентаваны на гарадскую ўстойлівасць."
+"Напрыклад, спецыяліст у галіне ГІС з 5+ гадамі вопыту ў аналізе "
+"рызыкаўкатастроф, арыентаваны на гарадскую ўстойлівасць."
 
 #: profile##analysis_objectives
 msgid "Analysis objectives"
@@ -1400,8 +1402,8 @@ msgid ""
 "challenge is improving flood risk mapping."
 msgstr ""
 "Напрыклад, аналіз гарадскога планавання з акцэнтам на кліматычную "
-"ўстойлівасць. Мая цяперашняя задача — паляпшэнне картаграфавання рызыкаў"
-"паводак."
+"ўстойлівасць. Мая цяперашняя задача — паляпшэнне картаграфавання "
+"рызыкаўпаводак."
 
 #: profile##appSettingsHeader
 msgid "Settings"
