--- a/src/core/localization/gettext/ru/common.po
+++ b/src/core/localization/gettext/ru/common.po
@@ -554,11 +554,11 @@ msgid ""
 "beyond this range.\n"
 "* **Exclude**: Exclude areas where values are out of range."
 msgstr ""
-"* **Ограничить (Clamp)**: Установить значения выше диапазона как 1, а ниже "
+"* **Ограничить**: Установить значения выше диапазона как 1, а ниже "
 "диапазона – как 0.\n"
-"* **Не изменять (Don't modify)**: Сохранить 0 и 1 для минимального и "
+"* **Не изменять**: Сохранить 0 и 1 для минимального и "
 "максимального значений, но допустить выбросы за пределами этого диапазона.\n"
-"* **Исключить (Exclude)**: Исключить области, где значения выходят за "
+"* **Исключить**: Исключить области, где значения выходят за "
 "пределы диапазона."
 
 #: mcda##bad
