--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -250,7 +250,7 @@
     "placeholder": {
       "select_area": "Select area (<icon1 />,<icon2 />,<icon3 />) you want to explore to get AI Insights.",
       "you_can_also": "You can also:",
-      "fill_bio": "<icon /> <lnk>Fill out bio</lnk> to personalize AI analysis",
+      "fill_bio": "<icon /> <lnk>Fill out analysis objectives</lnk> to personalize AI analysis",
       "select_and_save_as_reference_area": "<icon /> Select an area and save it as a reference to compare with another one",
       "learn_more": "<lnk><icon/> Learn more about AI Insights</lnk>"
     }
