--- a/src/core/localization/gettext/uk/common.po
+++ b/src/core/localization/gettext/uk/common.po
@@ -108,12 +108,11 @@ msgstr "Створити шар"
 
 #: toolbar##geometry_uploader
 msgid "Upload GeoJSON"
-msgstr ""
+msgstr "Завантажити GeoJSON"
 
 #: toolbar##focused_geometry_editor
 msgid "Draw or edit geometry"
-msgstr ""
-
+msgstr "Намалювати або редагувати геометрію"
 #: toolbar##edit_in_osm
 msgid "Edit map in OSM"
 msgstr "Редагувати мапу в OpenStreetMap"
