--- a/src/core/localization/gettext/ar/common.po
+++ b/src/core/localization/gettext/ar/common.po
@@ -1268,6 +1268,90 @@ msgstr ""
 msgid "User guide"
 msgstr ""
 
+#: about##title
+msgid "Welcome to Disaster Ninja!"
+msgstr ""
+
+#: about##intro
+msgid ""
+"Do you want to be notified about ongoing disasters? Are you interested in "
+"instant population data and other analytics for any region in the world? "
+"Disaster Ninja showcases some of <2>Kontur</2>’s capabilities in addressing "
+"these needs.<br/><br/>We initially designed it as a decision support tool "
+"for humanitarian mappers. Now it has grown in functionality and use cases. "
+"Whether you work in disaster management, build a smart city, or perform "
+"research on climate change, Disaster Ninja can help you to:"
+msgstr ""
+
+#: about##l1
+msgid "1. Stay up to date with the latest hazard events globally."
+msgstr ""
+
+#: about##p1
+msgid ""
+"The Disasters panel continually refreshes to inform you about ongoing "
+"events. It consumes data from the <2>Kontur Event Feed</2>, which you can "
+"also access via an API."
+msgstr ""
+
+#: about##l2
+msgid "2. Focus on your area of interest."
+msgstr ""
+
+#: about##p2
+msgid ""
+"The Drawing Tools panel allows you to draw or upload your own geometry on "
+"the map. You can also focus on a disaster-exposed area or an administrative "
+"unit — a country, city, or region."
+msgstr ""
+
+#: about##l3
+#, fuzzy
+msgid "3. Get analytics for the focused area."
+msgstr "طبقات في المنطقة المختارة"
+
+#: about##p3
+msgid ""
+"The Analytics panel shows the number of people living in that area per "
+"<2>Kontur Population</2> and estimated mapping gaps in OpenStreetMap. "
+"Kontur’s customers have access to hundreds of other indicators through "
+"Advanced Analytics."
+msgstr ""
+
+#: about##l4
+msgid "4. Explore data on the map and make conclusions."
+msgstr ""
+
+#: about##p4
+msgid ""
+"The Layers panel gives you various options to display two indicators "
+"simultaneously on a bivariate map, e.g., population density and distance to "
+"the nearest fire station. Use the color legend to assess which areas require "
+"attention. <br/>Hint: in general, green indicates low risk / few gaps, red — "
+"high risk / many gaps."
+msgstr ""
+
+#: about##p5
+msgid ""
+"In addition, you can switch to Reports in the left panel to access data on "
+"potential errors and inconsistencies in OpenStreetMap and help fix them by "
+"mapping the respective area with the JOSM editor."
+msgstr ""
+
+#: about##goToMap
+#, fuzzy
+msgid "Go to the map now"
+msgstr "لمعرفة حالة الخريطة"
+
+#: about##p6
+msgid ""
+"We hope you find this tool valuable. Use the chatbox on Disaster Ninja for "
+"any questions about the functionality, and we will be happy to guide you. "
+"You can also contact us by email at <1>hello@kontur.io</1> if you have "
+"feedback or suggestions on improving the tool.<br/><br/>Disaster Ninja is an "
+"open-source project. Find the code in <8>Kontur’s GitHub account</8>."
+msgstr ""
+
 #: profile##interfaceTheme
 msgid "Theme"
 msgstr "النسق"
@@ -1617,9 +1701,6 @@ msgstr ""
 
 #~ msgid "Please, select an area again"
 #~ msgstr "من فضلك، حدد منطقة مرة أخرى"
-
-#~ msgid "to see state of the map"
-#~ msgstr "لمعرفة حالة الخريطة"
 
 #~ msgid "Pick disaster from the list"
 #~ msgstr "حدد الكارثة في القائمة"
