--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -47,6 +47,9 @@
   "spinner_text": "Gathering data",
   "updated": "Updated",
   "started": "Started",
+  "created": "Created",
+  "mapping_types": "Mapping types",
+  "estimated_osm_gaps": "Estimated mapping gaps in OpenStreetMap",
   "no_data_received": "No data received",
   "wrong_data_received": "Wrong data received",
   "error": "Error",
